--- a/code/index.html
+++ b/code/index.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet" />
-    <title>Chat Bot</title>
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
+    <title>krass</title>
+</head>
 
-  <body>
-    <h1>Welcome to xxx.</h1>
-    <h2>Ask about xxxx.</h2>
+<body class="body">
+    <h1 class="logo">krass</h1>
+    <h2 class="intro-text">Your 24h Doc.Bot</h2>
     <main>
-      <section class="chat" id="chat"></section>
-
-      <div class="input-wrapper" id="input-wrapper">
-        <form id="name-form">
-          <input id="name-input" type="text" />
-          <button class="send-btn" type="submit">
+        <section class="chat" id="chat">
+        </section>
+        <div class="input-wrapper" id="input-wrapper">
+            <form id="doc-bot-form">
+                <input class="user-input" id="user-input" type="text" />
+                <button class="send-btn" type="submit">
             Send
-          </button>
-        </form>
-      </div>
+            </button>
+            </form>
+        </div>
     </main>
 
     <script src="./script.js"></script>
-  </body>
+</body>
 
 </html>
